--- a/css/menu.css
+++ b/css/menu.css
@@ -45,6 +45,8 @@
     font-size: 20px;
     padding-bottom: 2%;
     margin-bottom: 2%;
+
+    transition: font-size 0.5s;
 }
 
 .menu li ul.dropdown li {
@@ -65,6 +67,11 @@
 
 .menu li a:active {
     color: #EE232B;
+}
+
+.menu li ul a:hover{
+    font-size: 26px;
+    transition: font-size 0.5s;
 }
 
 .menu li:hover ul.dropdown {
