--- a/css/menu.css
+++ b/css/menu.css
@@ -26,7 +26,7 @@
     margin-bottom: auto;
     padding-bottom: 0px;
     padding-top: 0px;
-    height: 5vh;
+    height: 4vh;
     width: auto;
     position: relative;
     top: 7px;
@@ -49,7 +49,7 @@
     color: white;
     text-decoration: none;
     text-align: center;
-    font-size: 20px;
+    font-size: 1.5em;
     padding-bottom: 2%;
     margin-bottom: 2%;
 
