--- a/css/eurobeat.css
+++ b/css/eurobeat.css
@@ -1,5 +1,5 @@
 .container {
-    margin-top: 5vh;
+    margin-top: 9vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -14,7 +14,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    gap: 10px;
 }
 .video {
     margin-top: 0px;
@@ -27,23 +27,27 @@ video {
 .song{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     gap: 10px;
     align-items: center;
     border: 3px solid rgb(255, 255, 255);
     border-radius: 20px;
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    width: 250px;
 }
 .songDescription {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    gap: 5px;
+    gap: 2px;
 }
 .songDescription small {
-    font-size: 1rem;
+    font-size: 0.8rem;
     color: rgb(211, 211, 211);
+    text-align: center;
 }
 
 .song img {
