--- a/css/eurobeat.css
+++ b/css/eurobeat.css
@@ -54,3 +54,20 @@ video {
     width: 30px;
     height: 30px;
 }
+
+.playing {
+    border-color: #dc143c;
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .video {
+        width: 90vw;
+    }
+    video {
+        width: 90vw;
+    }
+}
