--- a/css/eurobeat.css
+++ b/css/eurobeat.css
@@ -1,5 +1,5 @@
 .container {
-    margin-top: 9vh;
+    margin-top: 2vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -57,6 +57,20 @@ video {
 
 .playing {
     border-color: #dc143c;
+}
+
+#playRandomSong {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 7vh;
+    padding: 10px;
+    border: 3px solid rgb(255, 255, 255);
+    border-radius: 20px;
+    width: 250px;
+    cursor: pointer;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media (max-width: 768px) {
