--- a/css/general.css
+++ b/css/general.css
@@ -60,6 +60,25 @@ footer {
     cursor: pointer;
 }
 
+#quote {
+    font-style: italic;
+    margin-bottom: 5vh;
+    font-size: 1.5rem;
+}
+#quote::before {
+    content: "“"; 
+    font-size: 1.5em; 
+    margin-right: 0.2em; 
+    color: #b0b0b0;
+}
+
+#quote::after {
+    content: "”"; 
+    font-size: 1.5em; 
+    margin-left: 0.2em;
+    color:#b0b0b0;
+}
+
 @media (max-width: 768px) {
     h1 {
         font-size: 2.5rem;
