--- a/css/home.css
+++ b/css/home.css
@@ -45,7 +45,13 @@ figcaption::before
     text-decoration: none;
 }
 
-/* Responsive Layout for Smaller Screens */
+canvas {
+    margin-bottom: 30px;
+    border: red 1px solid;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 @media (max-width: 768px) {
 
     .flexContainer {
