--- a/css/sign_up.css
+++ b/css/sign_up.css
@@ -10,15 +10,14 @@ main {
 }
 
 #submitButton{
-    margin-top: 2vh;
-    margin-bottom: 2vh;
+    margin-top: 3vh;
+    padding: 10px;
     margin-left: 10vw;
+    text-align: center;
     background-color: red;
     border-color: black;
     color: black;
-    text-align: center  ;
-    height: 4vh;
-    width: 10%;
+
     font-size: 1.3rem;
 }
 
