--- a/css/general.css
+++ b/css/general.css
@@ -79,6 +79,13 @@ footer {
     color:#b0b0b0;
 }
 
+#welcomeText {
+    font-style: italic;
+    font-size: 1rem;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+}
+
 @media (max-width: 768px) {
     h1 {
         font-size: 2.5rem;
